--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,8 @@
-== README
+#One Month Rails
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+this project has been configured by Gary Stewart and will be developed as a learning experience with Ruby on Rails. 
 
-Things you may want to cover:
+ the app will be a pinteresting sample application
+ [*one month rails*](http://onemonthrails.com)
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+ credit goes to Mattan Griffel
